# silo-proxy

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  agent.Dockerfile  envoy.Dockerfile  envoy.yaml  go.mod  go.sum  server.Dockerfile
.github/workflows/: build-server.yml
cmd/silo-proxy/: config.go  logger.go  main.go
cmd/silo-proxy-agent/: application.yaml  application.yml  config.go  main.go  provision.go
cmd/silo-proxy-server/: application.yaml  application.yml  config.go  logger.go  main.go
docs/: grpc-link-plan.md  potential_issues.md
docs/cert-provisioning/: overview.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
docs/grpc-link-plan/: overview.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
docs/per-agent-ports/: overview.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
internal/db/: db.go  (+1 more)
misc/: create-agent-cert.sh  delete-agent-cert.sh  delete-server-certs.sh  get-agent-cert.sh  list-connected-agents.sh  provision-agent-cert.sh  provision-key-create.sh  provision-key-list.sh  provision-key-revoke.sh  test-delete.sh  test-list.sh  test-upload.sh
nginx/: Dockerfile  Dockerfile.nginx  build-image.sh  docker-compose.yaml  docker-entrypoint.sh  silo-router.conf
proto/: proxy.pb.go  proxy.proto  proxy_grpc.pb.go
py/frontend-simulator/: README.md  main.py  pyproject.toml  run.sh
py/frontend-simulator/templates/: index.html
scripts/: generate-agent-cert.sh  generate-certs-custom.sh  generate-certs.sh
systemtest/: main_test.go
test/: grpc_client.go
(+78 files in other folders)
